--- a/styles/index.scss
+++ b/styles/index.scss
@@ -37,7 +37,7 @@ body {
   margin: 0;
   padding: 0;
   min-height: 100%;
-  background-color: $gray-10;
+  background-color: $white;
 }
 
 html {
@@ -115,6 +115,10 @@ html {
 
 // Shared END
 
+.photo {
+  height: 95px;
+  width: 120px;
+}
 .section-title {
   color: $gray-80;
 }
@@ -124,6 +128,22 @@ html {
   height: 0;
 }
 
+.fredoole {
+  border-bottom-left-radius: 25px;
+  border-bottom-right-radius: 25px;
+  border-top-right-radius: 25px;
+  border-top-left-radius: 25px;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
+}
+.center-search {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
+}
 .grow {
   -webkit-backface-visibility: hidden;
     backface-visibility: hidden;
